--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-Flask==2.3.3
-PyMuPDF==1.22.5
-spacy==3.7.4
-
-Package for interacting with the Google Gemini API
+flask
+python-dotenv
 google-generativeai
-gunicorn==21.2.0
